--- a/MAMeProject/requirements.txt
+++ b/MAMeProject/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.22.3
-pandas==1.4.1
-opencv-python==4.5.5.64
-python==3.8
-keras==2.8.0
+tensorflow==2.3.0
+keras==2.4.0
+pandas==0.25.1
+opencv-python==4.1.1
+numpy==1.18.4
