--- a/MAMeProject/requirements.txt
+++ b/MAMeProject/requirements.txt
@@ -1,5 +1,17 @@
-tensorflow==2.3.0
-keras==2.4.0
+numpy==1.22.3
 pandas==0.25.1
 opencv-python==4.1.1
-numpy==1.18.4
+python==3.7.4
+keras==2.4.0
+tensorflow=2.3
+gcc==8.3.0 
+ffmpeg==4.2.1 
+cuda==10.2 
+cudnn==7.6.4 
+nccl==2.4.8 
+tensorrt==6.0.1 
+openmpi==4.0.1 
+atlas==3.10.3 
+scalapack==2.0.2 
+fftw==3.3.8 
+szip==2.1.1 
